# crane_x7_vla

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: docker-build.yml  release.yml
docker/: Dockerfile.lerobot  Dockerfile.remote-inference  Dockerfile.remote-vla-rl  Dockerfile.ros2  Dockerfile.vla-rl
docs/: README.md  gemini.md  lerobot.md  lifter.md  remote.md  ros2.md  sim.md  vla-rl.md  vla.md
lerobot/: .gitignore
lifter/: .env.template  .gitignore  README.md  pyproject.toml
lifter/examples/sweeps/: sweep_openvla.yaml  sweep_openvla_oft.yaml  sweep_pi0.yaml  sweep_pi05.yaml
lifter/examples/templates/: openvla_oft_sweep.sh  openvla_oft_train.sh  openvla_sweep.sh  openvla_train.sh  pi05_sweep.sh  pi05_train.sh  pi0_sweep.sh  pi0_train.sh
lifter/examples/templates_local/: openvla_oft_sweep.sh  openvla_sweep.sh  pi05_sweep.sh  pi0_sweep.sh
lifter/src/lifter/: __init__.py  __main__.py  cli.py  config.py  job_script.py  utils.py
lifter/src/lifter/clients/: __init__.py  slurm.py  ssh.py
lifter/src/lifter/core/: __init__.py  cli_utils.py  console.py  exceptions.py  monitor.py
lifter/src/lifter/sweep/: __init__.py  base.py  cli.py  engine.py  template.py  wandb_client.py
lifter/src/lifter/sweep/backends/: __init__.py  local.py
lifter/src/lifter/ui/: __init__.py  monitor.py  status_table.py
ros2/: .gitignore  requirements.txt
ros2/src/crane_x7_bringup/launch/: vla_real.launch.py
ros2/src/crane_x7_sim_gazebo/urdf/: d435_ignition.xacro
ros2/src/crane_x7_sim_gazebo/worlds/: pick_and_place.sdf
ros2/src/crane_x7_vla/: setup.py
ros2/src/crane_x7_vla/config/: crane_x7_robot.yaml  vla_config.yaml
ros2/src/crane_x7_vla/crane_x7_vla/: __init__.py  initial_position_node.py  robot_controller.py  vla_inference_core.py  vla_inference_node.py
ros2/src/crane_x7_vla/crane_x7_vla/backends/: __init__.py  openvla.py  pi0.py
ros2/src/crane_x7_vla/crane_x7_vla/core/: __init__.py  base.py  factory.py  robot_config.py  types.py
ros2/src/crane_x7_vla/crane_x7_vla/utils/: __init__.py  config_manager.py  image.py  normalization.py  paths.py
ros2/src/crane_x7_vla/launch/: vla_control.launch.py  vla_inference_only.launch.py
scripts/: update-instruction.sh
sim/src/lift_genesis/: adapter.py
sim/src/lift_genesis/environments/: pick_place.py
sim/src/lift_maniskill/scripts/: joint_test.py  mjcf_test.py  record_policy.py  test.py  train.py
slurm/examples/sweeps/: sweep_pi05.yaml
slurm/examples/templates/: openvla_oft_train.sh
slurm/src/slurm_submit/: cli.py
slurm/src/slurm_submit/clients/: slurm.py
slurm/src/slurm_submit/core/: __init__.py  cli_utils.py
slurm/src/slurm_submit/sweep/: cli.py  engine.py
slurm/src/slurm_submit/sweep/backends/: __init__.py  local.py
vla/: .dockerignore  .env.template  Dockerfile  requirements-base.txt  requirements-minivla.txt  requirements-openpi.txt  requirements-openvla.txt  requirements-pi0.txt
vla-rl/src/crane_x7_vla_rl/algorithms/: advantage.py  ppo.py
vla-rl/src/crane_x7_vla_rl/environments/: lift_wrapper.py  parallel_envs.py
vla-rl/src/crane_x7_vla_rl/rewards/: binary_reward.py
vla-rl/src/crane_x7_vla_rl/rollout/: rollout_manager.py
vla-rl/src/crane_x7_vla_rl/training/: cli.py  trainer.py
vla-rl/src/crane_x7_vla_rl/vla/: openvla_adapter.py
vla/configs/: pi05_default.yaml  pi0_default.yaml
vla/src/crane_x7_vla/: __init__.py  data_types.py  pyproject.toml
vla/src/crane_x7_vla/backends/: __init__.py
vla/src/crane_x7_vla/backends/common/: __init__.py  data_utils.py  types.py
vla/src/crane_x7_vla/backends/common/hf/: __init__.py  configuration_prismatic.py  modeling_prismatic.py  processing_prismatic.py
vla/src/crane_x7_vla/backends/common/prompting/: __init__.py  prompters.py
vla/src/crane_x7_vla/backends/common/tokenizer/: __init__.py  action_tokenizer.py
vla/src/crane_x7_vla/backends/minivla/: __init__.py  backend.py  config.py  dataset.py
vla/src/crane_x7_vla/backends/minivla/action_tokenizer/: __init__.py  vq.py  vq_tokenizer.py
vla/src/crane_x7_vla/backends/openpi/: __init__.py  backend.py  config.py  data_config.py
vla/src/crane_x7_vla/backends/openpi_pytorch/: __init__.py  backend.py  config.py  dataset.py
vla/src/crane_x7_vla/backends/openvla/: __init__.py  backend.py  config.py  dataset.py
vla/src/crane_x7_vla/backends/openvla_oft/: __init__.py  backend.py  components.py  config.py  constants.py  dataset.py  train_utils.py
vla/src/crane_x7_vla/backends/openvla_oft/hf/: __init__.py  configuration_prismatic.py  modeling_prismatic.py  processing_prismatic.py
vla/src/crane_x7_vla/backends/pi0/: __init__.py  backend.py  checkpoint_utils.py  config.py  dataset.py  model.py
vla/src/crane_x7_vla/backends/pi0/models_pytorch/: __init__.py  gemma_pytorch.py  pi0_pytorch.py  preprocessing_pytorch.py
vla/src/crane_x7_vla/backends/pi0/models_pytorch/transformers_replace/models/gemma/: __init__.py  modeling_gemma.py
vla/src/crane_x7_vla/backends/pi0/models_pytorch/transformers_replace/models/paligemma/: __init__.py  modeling_paligemma.py
vla/src/crane_x7_vla/backends/pi0/models_pytorch/transformers_replace/models/siglip/: __init__.py  check.py  modeling_siglip.py
vla/src/crane_x7_vla/core/: __init__.py  base.py
vla/src/crane_x7_vla/core/config/: __init__.py  base.py  robot.py
vla/src/crane_x7_vla/core/data/: __init__.py  adapters.py  converters.py  image_augmentation.py  image_utils.py  tfrecord_reader.py  validation.py
vla/src/crane_x7_vla/core/transforms/: __init__.py  action_transforms.py  image_transforms.py  state_transforms.py
vla/src/crane_x7_vla/core/utils/: __init__.py  checkpoint.py  logging.py  training.py
vla/src/crane_x7_vla/data/: __init__.py
vla/src/crane_x7_vla/policies/: __init__.py  crane_x7_policy.py
vla/src/crane_x7_vla/scripts/: compute_crane_x7_norm_stats.py  convert_to_lerobot.py  merge_lora.py
vla/src/crane_x7_vla/training/: __init__.py  cli.py  cli_utils.py  trainer.py
