# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 nop

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crane_x7_vla"
version = "0.1.0"
description = "Unified VLA training framework for CRANE-X7 robot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "nop"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.5.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
openvla = [
    "tensorflow>=2.15.0",
    "tensorflow-datasets>=4.9.0",
]
openpi = [
    "jax[cuda12_pip]",
    "flax",
    "optax",
]
wandb = [
    "wandb>=0.16.0",
]
all = [
    "crane_x7_vla[dev,openvla,wandb]",
]

[project.scripts]
crane_x7_vla = "crane_x7_vla.training.cli:main"

[project.urls]
Homepage = "https://github.com/NOPLAB/crane_x7_vla"
Repository = "https://github.com/NOPLAB/crane_x7_vla"

[tool.setuptools.packages.find]
where = ["."]
include = ["crane_x7_vla*"]

# =============================================================================
# Ruff Configuration (Linter & Formatter)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

# Exclude paths
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "B905",   # zip strict
    "ARG001", # Unused function argument (common in callbacks)
    "ARG002", # Unused method argument
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG001", "ARG002"]  # Allow unused arguments in tests
# transformers_replace is copied from HuggingFace transformers library
# These files need to maintain compatibility with upstream code
"backends/pi0/models_pytorch/transformers_replace/*" = [
    "RUF012",  # Mutable class attributes (transformers pattern)
    "TC003",   # Type-checking imports (transformers pattern)
    "ARG004",  # Unused static method arguments (API compatibility)
    "E741",    # Ambiguous variable names (upstream code)
    "UP038",   # isinstance union types (Python 3.9 compat)
    "RUF005",  # Collection concatenation (upstream pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["crane_x7_vla"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# Pyright/Pylance Configuration
# =============================================================================
[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "basic"

# Include/exclude paths
include = ["."]
exclude = [
    "**/__pycache__",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    ".venv",
    "venv",
]

# Type checking settings
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedFunction = "warning"
reportDuplicateImport = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportPrivateUsage = "warning"
reportConstantRedefinition = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "none"
reportUntypedBaseClass = "none"
reportGeneralTypeIssues = "warning"

# Strict type checking (disabled for gradual adoption)
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"

# =============================================================================
# MyPy Configuration (Alternative type checker)
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "transformers.*",
    "torch.*",
    "PIL.*",
    "cv2.*",
    "wandb.*",
    "peft.*",
    "accelerate.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["crane_x7_vla"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
